src/snapshots/tptp__tfx__tests__tfx_arguments.snap
---
source: src/tfx.rs
expression: parsed
---
Arguments(
    [
        Logic(
            Unitary(
                Atomic(
                    Defined(
                        DefinedAtomic(
                            Constant(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
