src/snapshots/tptp__tfx__tests__tfx_atom_typing-3.snap
---
source: src/tfx.rs
expression: parsed
---
Parenthesised(
    Typing(
        Constant(
            Constant(
                Functor(
                    Lower(
                        LowerWord(
                            "c",
                        ),
                    ),
                ),
            ),
        ),
        Atomic(
            Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
        ),
    ),
)
