src/snapshots/tptp__tfx__tests__tfx_atom_typing.snap
---
source: src/tfx.rs
expression: parsed
---
Typing(
    Constant(
        Constant(
            Functor(
                Lower(
                    LowerWord(
                        "c",
                    ),
                ),
            ),
        ),
    ),
    Atomic(
        Variable(
            Variable(
                UpperWord(
                    "A",
                ),
            ),
        ),
    ),
)
