src/snapshots/tptp__tfx__tests__tfx_atomic_formula-3.snap
---
source: src/tfx.rs
expression: parsed
---
Defined(
    DefinedAtomic(
        Constant(
            DefinedConstant(
                DefinedFunctor(
                    AtomicDefinedWord(
                        DollarWord(
                            LowerWord(
                                "defined",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
