src/snapshots/tptp__tfx__tests__tfx_atomic_formula-5.snap
---
source: src/tfx.rs
expression: parsed
---
System(
    Constant(
        SystemConstant(
            SystemFunctor(
                AtomicSystemWord(
                    DollarDollarWord(
                        LowerWord(
                            "system",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
