src/snapshots/tptp__tfx__tests__tfx_atomic_formula.snap
---
source: src/tfx.rs
expression: parsed
---
Plain(
    Constant(
        Constant(
            Functor(
                Lower(
                    LowerWord(
                        "p",
                    ),
                ),
            ),
        ),
    ),
)
