src/snapshots/tptp__tfx__tests__tfx_atomic_type-3.snap
---
source: src/tfx.rs
expression: parsed
---
Defined(
    DefinedType(
        AtomicDefinedWord(
            DollarWord(
                LowerWord(
                    "defined_type",
                ),
            ),
        ),
    ),
)
