src/snapshots/tptp__tfx__tests__tfx_atomic_type-5.snap
---
source: src/tfx.rs
expression: parsed
---
Variable(
    Variable(
        UpperWord(
            "TypeVariable",
        ),
    ),
)
