src/snapshots/tptp__tfx__tests__tfx_atomic_type-7.snap
---
source: src/tfx.rs
expression: parsed
---
Function(
    TypeFunctor(
        Lower(
            LowerWord(
                "type_function",
            ),
        ),
    ),
    TypeArguments(
        [
            Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
            Variable(
                Variable(
                    UpperWord(
                        "B",
                    ),
                ),
            ),
        ],
    ),
)
