src/snapshots/tptp__tfx__tests__tfx_atomic_type.snap
---
source: src/tfx.rs
expression: parsed
---
Constant(
    TypeConstant(
        TypeFunctor(
            Lower(
                LowerWord(
                    "type_constant",
                ),
            ),
        ),
    ),
)
